--- a/src/routes/contactme/contactme.styles.scss
+++ b/src/routes/contactme/contactme.styles.scss
@@ -13,6 +13,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+
         .Contacts-Header {
             display: flex;
             flex-direction: column;
@@ -24,6 +25,7 @@
             border-radius: 10px;
             margin-bottom: 20px;
             border: 5px solid black;
+            text-align: center;
 
             .text {
                 font-size: 1.7vw;
