--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -36,18 +36,16 @@ $borderRadius: 4px;
 .intro-container {
   margin-top: 55px;
   background-color: white;
-  //border: 2px solid $primary;
-  border-radius: 4px;
-  height: 33vw;
-  width: 65%;
+  height: 26vw;
+  width: 55%;
 
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 20px 40px;
+  padding: 10px 10px;
   transform: translate(-2%, -2%);
-  font-family: "Abel";
+  font-family: $theme-font;
   text-decoration: none;
   font-size: 1vw;
   background-color: white;
@@ -73,5 +71,4 @@ $borderRadius: 4px;
     transform: skewY(45deg);
     background-color: darken(white, 25%);
   }
-
 }
