--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -1,44 +1,54 @@
 @import "../../../globals/theme.scss";
 $buttonTransitionTime: 0.07s;
 $borderRadius: 4px;
+
 %test {
   position: absolute;
   content: "";
   transition: all $buttonTransitionTime;
 }
 
-.image-container
-{
+.image-container {
   margin-top: 18px;
   margin-left: 40px;
   border-radius: 2px;
-  height: 80%;
-  width: 35%;
-  
+  height: 100%;
+  width: 30%;
+
   display: flex;
   flex-direction: row;
-  padding: 20px 40px;
-  transform: translate(-2%, -2%);
-  font-family: "Abel";
-  text-decoration: none;
+  padding: 20px 0px;
+  transform: translate(-10%, -10%);
   font-size: 1vw;
-  background-color: rgb(224, 224, 224);
 }
 
-.text-container
-{
-  margin-top: 18px;
-  margin-left: 15px;
+.text-container {
   border-radius: 2px;
   height: 60%;
-  width: 50%;
-  
+  width: 60%;
+  margin-right: 20px;
   display: flex;
-  flex-direction: row;
-  padding: 20px 40px;
-  transform: translate(-2%, -2%);
-  font-family: "Abel";
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  border-top: 1px solid $sub-primary;
+  border-bottom: 1px solid $sub-primary;
+}
+
+.text {
+  color: $primary;
+  font-family: $theme-font;
   text-decoration: none;
-  font-size: 1vw;
-  background-color: rgb(224, 224, 224);
+  font-size: 1.4vw;
+  text-align: left;
+}
+
+.name-text {
+  color: $primary;
+  font-family: $theme-font;
+  text-decoration: none;
+  font-size: 1.4vw;
+  text-align: left;
+  margin-bottom: 5px;
 }
