--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -85,7 +85,7 @@
   }
 
   .logo {
-    width: 40px;
+    max-width: 40px;
     max-height: 45px;
     transition: transform 0.25s ease-out;
   }
@@ -93,7 +93,7 @@
   .logo-title {
     font-family: $theme-font;
     color: $primary;
-    font-size: 0.7vw;
+    font-size: 0.85vw;
   }
 
   .box:hover {
