--- a/src/routes/contactme/contactme.styles.scss
+++ b/src/routes/contactme/contactme.styles.scss
@@ -26,12 +26,16 @@
             margin-bottom: 20px;
             border: 5px solid black;
             text-align: center;
+            transition: background-color 0.3s;
 
             .text {
                 font-size: 1.7vw;
                 color: white;
                 font-family: $theme-font;
             }
+        }
+        .Contacts-Header:hover{
+            background-color: $sub-primary;
         }
     }
 
