--- a/src/routes/home/explore_button/venturebutton.styles.scss
+++ b/src/routes/home/explore_button/venturebutton.styles.scss
@@ -1,4 +1,4 @@
-@import '../../../globals/theme.scss';
+@import "../../../globals/theme.scss";
 $buttonTransitionTime: 0.1s;
 $borderRadius: 4px;
 %test {
@@ -8,56 +8,56 @@ $borderRadius: 4px;
 }
 
 .toVenturesButton {
-    display: inline-block;
-    padding: 20px 40px;
-    color: white;
-    transform: translate(-10%, -10%);
-    font-family: $theme-font;
-    text-decoration: none;
-    font-size: 1.5vw;
-    transition: all $buttonTransitionTime;
-    background-color: $primary;
-    border-width: 0px;
-  
+  display: inline-block;
+  padding: 20px 40px;
+  color: white;
+  transform: translate(-10%, -10%);
+  font-family: $theme-font;
+  text-decoration: none;
+  font-size: 1.5vw;
+  transition: all $buttonTransitionTime;
+  background-color: $primary;
+  border-width: 0px;
+
+  &::before {
+    //bottom side
+    @extend %test;
+    bottom: -16px;
+    height: 17px;
+    width: 99.4%;
+    left: 8px;
+    transform: skewX(45deg);
+    background-color: darken($primary, 10%);
+  }
+
+  &::after {
+    // right side
+    @extend %test;
+    right: -15px;
+    height: 100%;
+    width: 16px;
+    bottom: -8px;
+    transform: skewY(45deg);
+    background-color: darken($primary, 30%);
+  }
+
+  &:active {
+    margin-left: 10px;
+    margin-top: 10px;
     &::before {
-      //bottom side
-      @extend %test;
-      bottom: -16px;
-      height: 17px;
-      width: 99.4%;
-      left: 8px;
-      transform: skewX(45deg);
-      background-color: darken($primary, 10%);
-    }
-  
-    &::after {
-      // right side
-      @extend %test;
-      right: -15px;
-      height: 100%;
-      width: 16px;
-      bottom: -8px;
-      transform: skewY(45deg);
-      background-color: darken($primary, 30%);
-    }
-  
-    &:active {
-      margin-left: 10px;
-      margin-top: 10px;
-      &::before {
-        bottom: -5px;
-        height: 5px;
-        left: 3px;
-      }
-  
-      &::after {
-        right: -5px;
-        width: 5px;
-        bottom: -3px;
-      }
+      bottom: -5px;
+      height: 5px;
+      left: 3px;
     }
 
-    &:hover{
-      background-color: $sub-primary;
+    &::after {
+      right: -5px;
+      width: 5px;
+      bottom: -3px;
     }
   }
+
+  &:hover {
+    background-color: $sub-primary;
+  }
+}
