--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -73,6 +73,17 @@
     -moz-osx-font-smoothing: grayscale;
     transition: transform 0.1s;
     box-shadow: 3px 3px 3px inset rgb(173, 173, 173);
+
+    .logo-container {
+      height: 100%;
+      width: 100%;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transform: translate(2.5%, 2.5%);
+    }
   }
 
   .logo-container {
