--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -1,10 +1,10 @@
-@import "../globals/theme.scss";
+@import "../globals/_theme.scss";
 
 .bottombar {
   height: 7rem;
   width: 65%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 25px;
   border-radius: 17px;
@@ -14,6 +14,15 @@
 
   background-color: white;
   box-shadow: 6px 7px 4px rgb(209, 209, 209);
+
+  .switchContainer {
+    margin-left: 20px;
+    font-family: $theme-font;
+
+    .toggle {
+      font-family: $theme-font;
+    }
+  }
 
   .extlinks-container {
     width: 25%;
