--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -23,6 +23,10 @@ $borderRadius: 4px;
 }
 
 .text-container {
+  @include themed() {
+    border-top: 1px solid t($sub-primary);
+    border-bottom: 1px solid t($sub-primary);
+  }
   border-radius: 2px;
   height: 60%;
   width: 60%;
@@ -31,13 +35,13 @@ $borderRadius: 4px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  border-top: 1px solid $sub-primary;
-  border-bottom: 1px solid $sub-primary;
 }
 
 .text {
-  color: $primary;
+  @include themed() {
+    color: t($primary);
+  }
+
   font-family: $theme-font;
   text-decoration: none;
   font-size: 1.4vw;
@@ -45,7 +49,9 @@ $borderRadius: 4px;
 }
 
 .name-text {
-  color: $primary;
+  @include themed() {
+    color: t($primary);
+  }
   font-family: $theme-font;
   text-decoration: none;
   font-size: 1.4vw;
